# aoa-course-connector

./: .env.example  .gitignore  AGENTS.md  BOUNDARIES.md  CHANGELOG.md  CHARTER.md  README.md  ROADMAP.md  pyproject.toml
.connector-state/: AGENTS.md  README.md
.github/workflows/: validate.yml
connector/: README.md  SOURCE_POLICY.md  STORAGE_POLICY.md
connector/manifests/: artifact_classes.yaml  connector_manifest.yaml  route_allowlist.yaml
connector/profiles/: starter-course.yaml
connector/schemas/: answer_packet.schema.json  artifact_integrity.schema.json  asset.schema.json  assignment.schema.json  comment.schema.json  comment_thread.schema.json  connection_profile.schema.json  course.schema.json  course_source.schema.json  entity.schema.json  evidence.schema.json  graph_edge.schema.json  graph_node.schema.json  index_manifest.schema.json  ingest_coverage.schema.json  ingest_run.schema.json  lesson.schema.json  lesson_context_packet.schema.json  module.schema.json  (+8 more)
docs/: ADAPTER_GUIDE.md  AGENT_INSTALL_ROUTE.md  ARCHITECTURE.md  AUTH_SESSION.md  BROWSER_SESSION.md  CLEAN_API_ADAPTERS.md  CLI_USAGE.md  GETCOURSE.md  GRAPH_MODEL.md  INSTALL.md  LIVE_CALIBRATION.md  MCP_USAGE.md  PRIVACY_SECURITY.md  QUERY_MODEL.md  RUNTIME_CONTRACT.md  SKILLSPACE.md  STARTER_PROOF.md  STATUS.md  STEPIK.md  STORAGE_CONTRACT.md  TROUBLESHOOTING.md
evals/: AGENTS.md  PORT.yaml  README.md
kag/: AGENTS.md  README.md  manifest.json
scripts/: validate_connector.py  validate_local_stats_port.py  verify_agent_install_route.py
stats/: AGENTS.md  README.md  port.manifest.json
(+425 files in other folders)
